@@ -10,6 +10,8 @@ Mon Jun 30 2014
    * BUGS output should now make use of prior specification for non-cross-classified models
    * Added check that a denominator has been specified for Binomial models
    * Added check that no variables are made random at level-one in discrete response models
+   * Added check that response variables for multinomial models have at least two categories
+   * Added check that the reference category is valid for multinomial models
 
 2. Changes
    * Enabled matching starting values on parameter names (allowing subsets of parameters to be specified)
@@ -23,6 +25,7 @@ Mon Jun 30 2014
    * Added Log-likelihood to the output for (R)IGLS models
    * prior2macro will automatically be called from runMLwiN if priorParam is specified as a list
    * Added hierarchy information to the model output
+   * Allow non-factor variables as the respone for multinomial models
 
 Fri Jun 20 2014
 1. Bug fixing
